--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -2,34 +2,147 @@
 <html>
 <head>
     <title>Jian He - Game & Design</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<body>
- <header>
-     <div class="container">
-    <div class="row">
-      <div class="col-6">
-        Jian He
-      </div>
-      <div class="col">
-        <a href="Game Design">Game Design</a>
-      </div>
-      <div class="col">
-        <a href="UI/UX Design">UI/UX Design</a>
-      </div>
-      <div class="col">
-        <a href="About">About</a>
-      </div>
-    </div>
+<!-- <style>.setbg{ float: left; position: relative; margin-top: 5px;} .Logo{ position:absolute; margin-left: 30px; margin-top: 20px;}</style> -->
+
+
+
+<!-- <div class="setbg">
+    <img src="../Portfolio 1/img/BgPic.jpg" alt="Logo" width="100%">
   </div>
-        
+  <br>
+  -->
+<body>
 
-    
- </header>   
+<header>
+
+<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+  <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+</video>
+<div class="row">
+  <div class="col">
+       <img class="logo" src="../Portfolio 1/img/Logo.png" alt="" width="15%">
+     </div>
+     <div class="col">
+<nav>
+<ul class="nav justify-content-end">
+<li class="nav-item">
+ <a class="nav-link active" href="index.html">HOME</a>
+</li>
+<li class="nav-item">
+ <a class="nav-link" href="games.html">GAMES</a>
+</li>
+<li class="nav-item">
+ <a class="nav-link" href="others.html">OTHERS</a>
+</li>
+<li class="nav-item">
+ <a class="nav-link" href="about.html">ABOUT</a>
+</li>
+</ul>
+</nav>
+</div></div>
+<div class="col branding">
+<div class="heading">
+JEREMY HO
+</div></div>
+<div class="col branding">
+<h6 align="center">Gamer | Game Design | Game Development | Photographer</h6>
+</div>
+</div>
+  <!-- <div class="bg-img">
+    <div class="row">
+      <div class="col">
+           <img src="../Portfolio 1/img/Logo.png" alt="" width="15%">
+         </div>
+         <div class="col">
+    <nav>
+    <ul class="nav justify-content-end">
+  <li class="nav-item">
+     <a class="nav-link active" href="#">HOME</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">GAMES</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">OTHERS</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">ABOUT</a>
+   </li>
+  </ul>
+  </nav>
+  </div></div>
+<div class="col branding">
+  <div class="heading">
+  JEREMY HO
+</div></div>
+<div class="col branding">
+  <h6 align="center">Gamer | Game Design | Game Development | Photographyr</h6>
+</div>
+  </div> -->
+ </header>
+ <main>
+<div class="row">
+  <div class="col align-self-center">
+    <a href="p1.html">
+      <img class="center-image" src="img/p1.png" alt="" width="750">
+  </a></div>
+    <div class="col align-self-center">
+      <a href="p2.html">
+        <img class="center-image" src="img/p2.png" alt="" width="750">
+      </a></div>
+    </div>
+    <div class="row">
+      <div class="col align-self-center">
+        <a href="p3.html">
+          <img class="center-image" src="img/p3.png" alt="" width="750">
+      </a></div>
+        <div class="col align-self-center">
+          <a href="others.html">
+            <img class="center-image" src="img/p4.png" alt="" width="750">
+          </a></div>
+        </div>
 
 
+ </main>
+ <footer>
+   <div class="row justify-content-between">
 
+       <div class="col navfooter">
+         <ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" href="index.html">HOME</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="others.html">OTHER DESIGNS</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="games.html">GAMES</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="about.html">CONTACT</a>
+  </li>
+</ul></div>
+  <div class="col-md-4">
+     <img src="img/footer.jpg" alt="" width="50%"></div>
 
+</div>
+     <img src="img/line.jpg" alt="" width="100%">
+     <div class="col-4">
+            <img src="img/ins.png" alt="" width="5%">
+            <img src="img/face.png" alt="" width="5%">
+            <img src="img/twitter.png" alt="" width="5%">
+            <img src="img/weibo.png" alt="" width="5%">
+          </div>
+          <div class="bottomright">
+            © 2019 Jian He. All rights reserved.
+          </div>
+ </footer>
+</body>
+</html>
 
 
 
